--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   translator: ^0.1.4
   flutter_web_browser: ^0.11.0
   share: ^0.6.4+3
+  flutter_local_notifications: ^1.4.4+2
   
   
 
