--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_web_browser: ^0.11.0
   share: ^0.6.4+3
   flutter_local_notifications: ^1.4.4+2
+  introduction_screen: ^1.0.9
   
   
 
@@ -77,6 +78,11 @@ flutter:
     - assets/airplane.png
     - assets/icon.png
     - assets/newss.png
+    - assets/img1.png
+    - assets/img2.png
+    - assets/img3.png
+    - assets/img4.png
+    
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
