--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   share: ^0.6.4+3
   flutter_local_notifications: ^1.4.4+2
   introduction_screen: ^1.0.9
+  native_state: ^1.1.1
+  
+  shared_preferences: ^0.5.8
   
   
 
